--- a/towerofhanoi.html
+++ b/towerofhanoi.html
@@ -7,11 +7,11 @@
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
-  <link rel="stylesheet" href="toh.css">
+  <link rel="stylesheet" href="./toh.css">
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
-  <script defer src="toh.js"></script>
+  <script defer src="./toh.js"></script>
 </head>
 <body>
   <div class="text-center my-4">
